crates/plotnik-lib/tests/02-parser/recovery_validation/capture_name_with_hyphens.txt
(a) @my-name
------------------ DIAGNOSTICS -------------------
error: capture names must be snake_case
 --> query.ptk:1:5
  |
1 | (a) @my-name
  |     ^^^^^^^^
  |
help: use `@my_name`
  |
1 - (a) @my-name
1 + (a) @my_name
  |
help: captures become fields in the output
